--- a/monitoreo/templates/nav_riesgos.html
+++ b/monitoreo/templates/nav_riesgos.html
@@ -1,5 +1,5 @@
 <div id="contenedor_igual">
-  <a href="#" class="educacion">Vulnerabilidad de la finca</a>
+  <a href="/vulnerable" class="educacion">Vulnerabilidad de la finca</a>
   <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
   <a href="/mitigariesgos" class="educacion">Mitigación de riesgos</a>
   <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
