--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -2,15 +2,10 @@
 {%load unslugify %}
 {%block titulo%}
 Existencia de árboles y Reforestación
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
-    $(document).ready(function(){
-        $('#mas').click(function(){
-            $('#mostrar').slideDown();
-        })
-    });
     var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/arboles/' + id, function(data) {
