--- a/monitoreo/templates/simas/suelos.html
+++ b/monitoreo/templates/simas/suelos.html
@@ -2,18 +2,9 @@
 {%load unslugify %}
 {% block titulo %}
 Subindicador Caracterización del Terrreno
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {% endblock%}
-{%block extra_header%}
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('#mas').click(function(){
-            $('#mostrar').slideDown();
-        })
-    });
 
-</script>
-{%endblock%}
 {% block contenido %}
 {% include "nav_suelo.html" %}
 <div class="separador"></div>
@@ -21,8 +12,6 @@ Subindicador Caracterización del Terrreno
 <div id="mostrar">
     {% include "simas/menu.html" %}
 </div>
-
-<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
 
 <div class="contenido">
     <table>
