--- a/monitoreo/templates/simas/ahorro_credito.html
+++ b/monitoreo/templates/simas/ahorro_credito.html
@@ -2,7 +2,7 @@
 {%load unslugify %}
 {%block titulo %}
 Subindicador Ahorro y Credito
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
@@ -86,7 +86,7 @@ Subindicador Ahorro y Credito
         </tbody>
     </table>
 
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Los créditos</caption>
         <thead>
             <tr>
