--- a/monitoreo/templates/simas/animales.html
+++ b/monitoreo/templates/simas/animales.html
@@ -2,7 +2,7 @@
 {%load unslugify %}
 {% block titulo %}
 Subindicador animales
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {% endblock%}
 
 {% block contenido %}
@@ -12,7 +12,7 @@ Subindicador animales
 </div>
 
 <div class="contenido">
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Los Animales</caption>
         <thead>
             <tr>
@@ -41,7 +41,7 @@ Subindicador animales
         </tbody>
     </table>
 
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Los Animales y la Producción </caption>
         <thead>
             <tr>
@@ -66,16 +66,5 @@ Subindicador animales
         </tbody>
     </table>
 </div>
-<script>
-    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-    // ademas que ordene por defecto las filas 0,0 y 2,1
-    $(document).ready(function()
-    {
-        //$("#table_example").tablesorter();
-        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    }
-); 
-</script>
 
 {% endblock %}
