--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -2,7 +2,7 @@
 {%load unslugify %}
 {% block titulo %}
 Subindicador los Cultivos y la producción
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {% endblock %}
 {
 {%block contenido%}
@@ -11,7 +11,7 @@ Subindicador los Cultivos y la producción
 </div>
 
 <div class="contenido">
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Los cultivos y la producción</caption>
         <thead>
             <tr>
