--- a/monitoreo/templates/simas/manejo_agro.html
+++ b/monitoreo/templates/simas/manejo_agro.html
@@ -2,7 +2,7 @@
 {%load unslugify %}
 {% block titulo %}
 Subindicador Opciones de Manejo Agroecológico
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {% endblock%}
 {% block contenido %}
 
@@ -12,7 +12,7 @@ Subindicador Opciones de Manejo Agroecológico
 
 <div class="contenido">
     <table>
-        <caption>Manejo Agroecológico</caption>
+        <caption>Nivel de conocimiento</caption>
         <thead>
             <tr>
                 <th>uso de manejo agro.</th>
@@ -23,10 +23,6 @@ Subindicador Opciones de Manejo Agroecológico
                 <th>Algo</th>
                 <th>%</th>
                 <th>Bastante</th>
-                <th>%</th>
-                <th>Experimentan menor escala</th>
-                <th>%</th>
-                <th>Experimentan mayor escala</th>
                 <th>%</th>
             </tr>
         </thead>
@@ -42,13 +38,38 @@ Subindicador Opciones de Manejo Agroecológico
                 <td>{{value.por_algo|floatformat}}</td>
                 <td>{{value.bastante|floatformat}}</td>
                 <td>{{value.por_bastante|floatformat}}
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
+    <br></br>
+     <table>
+        <caption>Ha experimentado</caption>
+        <thead>
+            <tr>
+                <th>uso de manejo agro.</th>
+                <th>Menor escala (Si)</th>
+                <th>Menor escala (No)</th>
+                <th>%</th>
+                <th>Mayor escala (Si)</th>
+                <th>Mayor escala (No)</th>
+                <th>%</th>
+            </tr>
+        </thead>
+        <tbody>
+            {%for key, value in tabla_escala.items%}
+            <tr>
+                <td>{{key|unslugify}}</td>
                 <td>{{value.menor_escala|floatformat}}</td>
+                <td>{{value.menor_escala2|floatformat}}</td>
                 <td>{{value.por_menor_escala|floatformat}}</td>
                 <td>{{value.mayor_escala|floatformat}}</td>
+                <td>{{value.mayor_escala2|floatformat}}</td>
                 <td>{{value.por_mayor_escala|floatformat}}</td>
             </tr>
             {%endfor%}
         </tbody>
     </table>
+    <br></br><br></br>
 </div>
 {% endblock %}
