--- a/monitoreo/templates/simas/organizacion.html
+++ b/monitoreo/templates/simas/organizacion.html
@@ -3,7 +3,7 @@
 {% block title %}Monitoreo - Organización{% endblock %}
 {%block titulo%}
 Organización
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {%endblock%}
 {% block contenido %}
 
