acerca del sistema

--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -4,7 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{%block title%}Sistema de Informaci&oacute;n Monitoreo Zona Alta y Seca{%endblock%}</title>
         <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
+        <link href="{{MEDIA_URL}}css/colorbox.css" rel="stylesheet" type="text/css" media="all" title=""/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>        
+        <script src="{{MEDIA_URL}}js/jquery.colorbox-min.js"></script>
         <script type="text/javascript">
             var flag = true;
             $(document).ready(function(){
@@ -22,6 +24,13 @@
                 });
             });
         </script>
+        
+        <script type="text/javascript">
+		$(document).ready(function(){
+			$(".example5").colorbox();
+			
+		});
+	</script>
 	{%block extra_header%}{%endblock%}
     </head>
     <body>
