--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -79,9 +79,15 @@
 <div class="acerca">
     <div class="title">Acerca de</div>
     <div class="cuerpo">
-        Etiam nisi nunc sociis scelerisque ac duis magnis aenean. Natoque, a scelerisque nec porta mus rhoncus adipiscing magnis quis elit nisi porta aliquam integer, dapibus tortor cursus, ut et et. Est et, phasellus parturient? Et parturient nunc lundium proin egestas amet sed duis ut ultricies aliquam proin porta odio a eros montes mauris velit cursus eros porttitor urna magna magna! Ut porta sagittis, porttitor turpis amet? Scelerisque ridiculus egestas facilisis aliquet phasellus!
-        <br><br>Mus adipiscing placerat, cum turpis magna! Eu odio? Mauris tincidunt sagittis pulvinar ac vut platea dignissim. Magnis elementum, adipiscing cum! Ac tortor duis dictumst? Magna sit aliquet cum! Nunc pellentesque.
-        <a href="#">Continuar leyendo <img src="/archivos/imagen/seguir.png" class="seguir" alt="seguir"></a>
+        <h4>La importancia del monitoreo</h4>
+            El seguimiento, monitoreo y evaluación, es uno de los procesos esenciales en
+            el ciclo de vida de las políticas públicas que se realizan en diferentes ámbitos,
+            desde lo regional a lo local. Sin embargo, es tal vez la actividad que menos
+            se desarrolla, en parte por la escasez de recursos, la ausencia de sistemas de
+            información que permitan soportar dicha tarea y porqué no, la falta de una
+            cultura que conciba que los procesos no terminan con las obras y la ejecución.
+        <br><br>
+        <a class='example5' href="/ayuda">Continuar leyendo <img src="/archivos/imagen/seguir.png" class="seguir" alt="seguir"></a>
     </div>    
 </div>
 <div class="clean"></div>
