--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -69,7 +69,7 @@
             <img src="/archivos/imagen/hombres.png" alt="Hombres" class="personas">
         </div>
         <br>
-        <a href="#" class="explorar"></a>
+        <a href="/index" class="explorar"></a>
         <div class="clean"></div>
     </div>
 </div>
